fix(its-battistar): :bug: fix overflow not working in todo component grid
closes #37 closes #36

--- a/apps/its-battistar/src/app/components/todos/todos.component.scss
+++ b/apps/its-battistar/src/app/components/todos/todos.component.scss
@@ -1,7 +1,3 @@
-// .content {
-// display: grid;
-// align-items: start;
-
-// justify-content: start;
-// grid-auto-columns: 1fr;
-// }
+.content-grid {
+  max-height: calc(100vh - 350px);
+}
